# fintech-decisioning-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml
app/: main.py
app/agents/: decisioning_agent.py  tools.py
app/api/: health.py  routes.py
app/chains/: bedrock_llm.py
app/models/: schemas.py
app/rag/: ingestion.py  retriever.py
app/retrieval/: vector_store.py
app/schemas/: decision.py
app/utils/: config.py  logger.py
infra/k8s/: deployment.yaml
scripts/: push_to_github.sh
tests/: test_agent.py  test_api.py  test_tools.py
