[project]
name = "fintech-decisioning-agent"
version = "0.1.0"
authors = [{name = "Yash Patil", email = "yashpatil582@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/yashpatil582/fintech-decisioning-agent"
Repository = "https://github.com/yashpatil582/fintech-decisioning-agent"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
